bug fixes
fixed light / dark mode defaults and for browser with transparent controls, the colors out of view

--- a/website/src/style/App.css
+++ b/website/src/style/App.css
@@ -42,7 +42,7 @@
 }
 
 .App-body-margin-on {
-  margin-left: 17rem;
+  padding-left: 17rem;
 }
 
 .App-body-dark {
